接下来计算图片尺寸再撑开

--- a/light-box/src/sass/style.scss
+++ b/light-box/src/sass/style.scss
@@ -4,6 +4,8 @@
 }
 
 #mask{
+	display: none;
+
 	position: fixed;
 	left: 0;
 	right: 0;
@@ -14,11 +16,13 @@
 }
 
 #popup{
+	display: none;
+
 	position: fixed;
 	width: 400px;
 	height: 300px;
 	left: 50%;
-	top: 50px;
+	top: 50%;
 	margin-left: -200px;
 	z-index: 100;
 
@@ -27,7 +31,7 @@
 		border:5px solid #fff; 
 		border-radius: 3px;
 		overflow: hidden;
-		background: url(../img/icon/loading.gif) no-repeat center center;
+		background: #fff url(../img/icon/loading.gif) no-repeat center center;
 
 		.btn{
 			position: absolute;
